package com.mss301.petclinic.genai.chat;

public record ChatReply(
        String reply,
        String conversationId
) {}
